--- a/BBScoreboard.WebApp/Web.config
+++ b/BBScoreboard.WebApp/Web.config
@@ -14,8 +14,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|BBScoreboard.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
-    <add name="BBScoreboardEntities" connectionString="metadata=res://*/BBScoreboardModel.csdl|res://*/BBScoreboardModel.ssdl|res://*/BBScoreboardModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|BBScoreboard.mdf;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="ConnectionString" connectionString="Data Source=(local);Initial Catalog=BBScoreboard;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="BBScoreboardEntities" connectionString="metadata=res://*/BBScoreboardModel.csdl|res://*/BBScoreboardModel.ssdl|res://*/BBScoreboardModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);Initial Catalog=BBScoreboard;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <appSettings>
     <add key="DefaultUserEmail" value="admin@someorg.org"/>
