--- a/IISExpress/applicationhost.config
+++ b/IISExpress/applicationhost.config
@@ -154,6 +154,7 @@
         </application>
         <bindings>
           <binding protocol="http" bindingInformation=":7777:localhost" />
+          <binding protocol="https" bindingInformation="*:44320:*" />
         </bindings>
       </site>
       <siteDefaults>
